# portfolio

./: Project Report Group 6A.docx  README.md
C++ projects/a1/a1_skeleton/: CMakeLists.txt  Doxyfile  cell.cpp  cell.h  circle.cpp  circle.h  index.dox  laser.cpp  laser.h  line.cpp  line.h  main.cpp  processing.cpp  processing.h  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  rangerfusioninterface.h  rangerinterface.h  sonar.cpp  sonar.h
C++ projects/a1/a1_skeleton/build-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  a2_skeleton.cbp  a2_skeleton_ex  cmake_install.cmake
C++ projects/a1/a1_skeleton/build-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  a2_skeleton.cbp  a2_skeleton_ex  cmake_install.cmake
C++ projects/a1/a1_skeleton/html/: annotated.html  bug.html  cell_8h_source.html  circle_8h_source.html  classCell-members.html  classCell.html  classCircle-members.html  classCircle.html  classLaser-members.html  classLaser.html  classLaser__coll__graph.md5  classLaser__inherit__graph.map  classLaser__inherit__graph.md5  classLine-members.html  classLine.html  classRanger-members.html  classRanger.html  classRangerFusion-members.html  classRangerFusion.html  classRangerFusionInterface-members.html  classRangerFusionInterface.html  classRangerFusionInterface__inherit__graph.map  classRangerFusionInterface__inherit__graph.md5  classRangerFusion__coll__graph.map  classRangerFusion__coll__graph.md5  classRangerFusion__inherit__graph.md5  classRangerInterface-members.html  classRangerInterface.html  classRangerInterface__inherit__graph.map  classRangerInterface__inherit__graph.md5  classRanger__coll__graph.map  classRanger__coll__graph.md5  classRanger__inherit__graph.map  classRanger__inherit__graph.md5  classSonar-members.html  classSonar.html  classSonar__coll__graph.md5  classSonar__inherit__graph.map  classSonar__inherit__graph.md5  classes.html  (+50 more)
C++ projects/a1/a1_skeleton/latex/: annotated.tex  bug.tex  classCell.tex  classCircle.tex  classLaser.tex  classLaser__coll__graph.md5  classLaser__inherit__graph.md5  classLine.tex  classRanger.tex  classRangerFusion.tex  classRangerFusionInterface.tex  classRangerFusionInterface__inherit__graph.md5  classRangerFusion__coll__graph.md5  classRangerFusion__inherit__graph.md5  classRangerInterface.tex  classRangerInterface__inherit__graph.md5  classRanger__coll__graph.md5  classRanger__inherit__graph.md5  classSonar.tex  classSonar__coll__graph.md5  classSonar__inherit__graph.md5  hierarchy.tex  index.tex  namespacecell.tex  namespacefusionGeometry.tex  namespacelaser.tex  namespaceranger.tex  namespaces.tex  namespacesonar.tex  refman.tex  structfusionGeometry_1_1sonarScan.tex  structfusionGeometry_1_1sonarScan__coll__graph.md5  structgeometry__msgs_1_1Point.tex  structranger_1_1SensorPose.tex
C++ projects/a1/a1_skeleton/test/: CMakeLists.txt  README.md  laser_fusion.cpp  sonar_fusion.cpp  test_fusion.cpp  test_rawdata.cpp
C++ projects/a2/a2_v2/: CMakeLists.txt  advpathfinder.cpp  advpathfinder.h  advpilot.cpp  advpilot.h  bscpathfinder.cpp  bscpathfinder.h  bscpilot.cpp  bscpilot.h  index.dox  main.cpp  pathfinderbase.cpp  pathfinderbase.h  pathfinderinterface.h  pilotbase.cpp  pilotbase.h  pilotinterface.h  rvsData.txt  tf2.cpp  tf2.h
C++ projects/a2/a2_v2/build-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  a2_v2  a2_v2.cbp  cmake_install.cmake
C++ projects/a2/a2_v2/build-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  a2_v2  a2_v2.cbp  cmake_install.cmake
C++ projects/a2/a2_v2/html/: advpathfinder_8h.html  advpathfinder_8h__dep__incl.map  advpathfinder_8h__dep__incl.md5  advpathfinder_8h__incl.map  advpathfinder_8h__incl.md5  advpathfinder_8h_source.html  advpilot_8h.html  advpilot_8h__dep__incl.map  advpilot_8h__dep__incl.md5  advpilot_8h__incl.map  advpilot_8h__incl.md5  advpilot_8h_source.html  annotated.html  bscpathfinder_8h.html  bscpathfinder_8h__dep__incl.map  bscpathfinder_8h__dep__incl.md5  bscpathfinder_8h__incl.map  bscpathfinder_8h__incl.md5  bscpathfinder_8h_source.html  bscpilot_8h.html  bscpilot_8h__dep__incl.map  bscpilot_8h__dep__incl.md5  bscpilot_8h__incl.map  bscpilot_8h__incl.md5  bscpilot_8h_source.html  bug.html  classAdvPathFinder-members.html  classAdvPathFinder.html  classAdvPathFinder__coll__graph.map  classAdvPathFinder__coll__graph.md5  classAdvPathFinder__inherit__graph.map  classAdvPathFinder__inherit__graph.md5  classAdvPilot-members.html  classAdvPilot.html  classAdvPilot__coll__graph.md5  classAdvPilot__inherit__graph.map  classAdvPilot__inherit__graph.md5  classBscPathFinder-members.html  classBscPathFinder.html  classBscPathFinder__coll__graph.map  (+72 more)
C++ projects/a2/a2_v2/latex/: advpathfinder_8h.tex  advpathfinder_8h__dep__incl.md5  advpathfinder_8h__incl.md5  advpilot_8h.tex  advpilot_8h__dep__incl.md5  advpilot_8h__incl.md5  annotated.tex  bscpathfinder_8h.tex  bscpathfinder_8h__dep__incl.md5  bscpathfinder_8h__incl.md5  bscpilot_8h.tex  bscpilot_8h__dep__incl.md5  bscpilot_8h__incl.md5  bug.tex  classAdvPathFinder.tex  classAdvPathFinder__coll__graph.md5  classAdvPathFinder__inherit__graph.md5  classAdvPilot.tex  classAdvPilot__coll__graph.md5  classAdvPilot__inherit__graph.md5  classBscPathFinder.tex  classBscPathFinder__coll__graph.md5  classBscPathFinder__inherit__graph.md5  classBscPilot.tex  classBscPilot__coll__graph.md5  classBscPilot__inherit__graph.md5  classPathFinderBase.tex  classPathFinderBase__coll__graph.md5  classPathFinderBase__inherit__graph.md5  classPathFinderInterface.tex  classPathFinderInterface__inherit__graph.md5  classPilotBase.tex  classPilotBase__coll__graph.md5  classPilotBase__inherit__graph.md5  classPilotInterface.tex  classPilotInterface__inherit__graph.md5  files.tex  hierarchy.tex  index.tex  main_8cpp.tex  (+16 more)
C++ projects/a2/a2_v2/test/: CMakeLists.txt  associationtest.cpp  bogieextrapolationtest.cpp  posetest.cpp
C++ projects/a3/a3_v1/: CMakeLists.txt  mainpage.dox  package.xml
C++ projects/a3/a3_v1/launch/: a3_depends.launch  a3_launchall.launch
C++ projects/a3/a3_v1/rviz/: pfms.rviz
(+323 files in other folders)
