<?xml version="1.0"?>
<package>
  <name>a3_12977866</name>
  <version>1.0.1</version>
  <description>a3 - personal assistant</description>

  <maintainer email="chamath.edirisinhege@stduent.uts.edu.au">Chamath Edirisinhege</maintainer>

  <license>UTS</license>

  <author email="chamath.edirisinhege@student.uts.edu.au">Chamath Edirisinhege</author>

 <url type="website">http://https://canvas.uts.edu.au/courses/18651</url>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>project_setup</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>project_setup</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>

