<?xml version="1.0"?>
<package>
  <name>pfms_path_following</name>
  <version>1.0.0</version>
  <description>Robot Path Following</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="Ajal.N.Singh@student.uts.edu.au">Ajal Singh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/a5_help</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="Ajal.N.Singh@student.uts.edu.au">Ajal Singh</author>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>a4_setup</build_depend> <!-- This package depends on a5_setup, as we use a service declared there -->
  <!--build_depend>cv_bridge</build_depend-->
  <!--build_depend>image_transport</build_depend-->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>a4_setup</run_depend>
  <!--run_depend>cv_bridge</run_depend-->
  <!--run_depend>image_transport</run_depend-->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
